--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,23 @@ body {
   background-color: #1a1a1a;
 }
 
+.mySwiper {
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.mySwiper .swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto !important; /* Override Swiper's default width */
+}
+
+.mySwiper video,
+.mySwiper img {
+  width: 100%;
+  max-width: 100%;
+  height: 9rem;
+  object-fit: cover;
+}
